# MyNotes

./: .gitignore  CMakeLists.txt  README.md  学习路线.uml
CloudMusic/: CMakeLists.txt  README.md
CloudMusic/src/: main.cpp  main.qml
Doc/QtDevReady/: 学习路线.uml
Doc/QtTest/: README.md
QtDemo/: CMakeLists.txt  README.md  outline.uml
QtDemo/QMLDemo/: CMakeLists.txt
QtDemo/QMLMaterial/: CMakeLists.txt  vendor.cmake
QtDemo/QWidgetDemo/: CMakeLists.txt
QtDemo/qml/: CMakeLists.txt
QtDemo/qwidget/: config.cmake
QtTest/: CMakeLists.txt  config.cmake
acore/: CMakeLists.txt
acore/inc/: aapppath.h  acore_global.h  afilemgr.h  afoldermgr.h  alangmgr.h  alogmgr.h  aobjecthelper.h  apainterhelper.h  asinglton.h  astring.h  astylemgr.h
acore/src/: aapppath.cpp  afilemgr.cpp  afoldermgr.cpp  alangmgr.cpp  alogmgr.cpp  aobjecthelper.cpp  apainterhelper.cpp  astring.cpp  astylemgr.cpp
aml/: CMakeLists.txt  README.md  vendor.cmake
aml/font/: font.qrc
aml/icon/: icon.qrc
aml/inc/: aframelesswindow.h  aml_global.h
aml/src/: aframelesswindow.cpp  qmldir  src.qrc  test.cpp  test1.qml
aml/src/control/: Test.qml  control.qrc  qmldir
aml/src/core/: core.qrc  test.h
aosx/: CMakeLists.txt
aosx/inc/: aowidgethelper.h
aosx/src/: aowidgethelper.mm
awidget/: CMakeLists.txt  awidget.qrc
awidget/inc/: acheckbox.h  acombobox.h  adialog.h  aflowlayout.h  ahboxlayout.h  alabel.h  alineedit.h  aprogressbar.h  apushbutton.h  aradiobutton.h  ashadoweffect.h  asinglton.h  aslider.h  astackedlayout.h  astackedwidget.h  atabbar.h  atabwidget.h  atextedit.h  avboxlayout.h  awidget.h  awidget_global.h
awidget/src/: acheckbox.cpp  acombobox.cpp  adialog.cpp  aflowlayout.cpp  ahboxlayout.cpp  alabel.cpp  alineedit.cpp  aprogressbar.cpp  apushbutton.cpp  aradiobutton.cpp  ashadoweffect.cpp  aslider.cpp  astackedlayout.cpp  astackedwidget.cpp  atabbar.cpp  atabwidget.cpp  atextedit.cpp  avboxlayout.cpp  awidget.cpp
cloudmusic/: CMakeLists.txt  config.cmake
cloudmusic/src/: main.cpp  main.qml
cmake/: c.cmake  ccode.cmake  cexe.cmake  clink.cmake  cmake.cmake  code.cmake  cpublic.cmake  cso.cmake  exe.cmake  file.cmake  install.cmake  link.cmake  option.cmake  public.cmake  q.cmake  qlink.cmake  qtcmake.cmake  qtcode.cmake  qtexe.cmake  qtso.cmake  setoutput.cmake  so.cmake
doc/: 001使用VS2022进行Qt开发.md  002使用VSCode和CMake进行Qt开发.md  005使用VSCode调试多进程项目.md  006Mac下VSCode的Qt调试配置.md  007Qt多语言翻译脚本.md  013mac崩溃日志符号化.md  015父窗体背景色影响控件样式.md  017QSS笔记.md  017有命名空间自定义控件qss类选择器不生效.md  018布局笔记.md  020使用vscode调试qt源码.md  022使用矢量图标遇到的问题.md  024Popup窗体属性问题.md  025mac arm开发qt环境安装.md  04 Qt .pro 和 cmake 工程转 Visual Studio .sln工程.md  700QSS笔记.md  901QT常见设计模式--实现私有化(Pimpl).md  MyResume.md  books.md  jianli.md
doc/avmedia/: README.md  音视频流媒体开发知识归纳导图.puml
doc/claudecode/: README.md  claude-code-quick-reference.md  claude-code-skills-guide.md  claude-code-with-copilot.md  compound-engineering-plugin.md
doc/cmake/: 997QT使用CMAKE注意事项README.md  998CMAKE常用变量README.md  998CMAKE常用指令README.md  CMake 判断 Debug Release.md  CMake 输出目录设置.md  POST_BUILD 和 copy_if_different 的行为.md
doc/codex/: codex.ps1
doc/cpp/: README.md
doc/debug/: CMake 构建 C++ 程序流程.md  Win 和 Mac 下的静态库、动态库的差异.md  使用 WinDbg 分析 .dmp 文件指南.md  未定义行为跨平台问题.md  链接符号查找.md
doc/docker/: 安装MySQL.md
doc/flutter/: Flutter 优秀开源项目与学习资源.md  Flutter官方文档视频中文教程社区传送门.md
doc/git/: 000git使用常规工作流.md  001git使用常规工作流.md  001git配置.md  001git配置ssh.md  002git取消提交.md  002git文件夹大小写不识别处理.md  003 GitHub Hosts 加速配置.md
doc/linux/: CentOS虚拟机安装并使用VScode SSH连接.md  Ubuntu Docker 安装.md  Ubuntu安装 Clash Verge.md  Ubuntu安装Claude Code.md  linux虚拟机安装并使用VScode SSH连接.md
doc/openclaw/: CORS_FIX_GUIDE.md  DEPLOYMENT_GUIDE.md  README.md  deploy-openclaw-aliyun.ps1  deploy-openclaw-aliyun.sh  服务器部署openclaw.md
doc/opencv/: README.md
doc/other/: 1000读写json配置.md  997关于dllexport的使用README.md  999草稿笔记.md
doc/qt/: 002使用VSCode和CMake进行Qt开发.md  008Qt信号与槽绑定方式.md  010QMetaObject invokeMethod动态调用.md  016QSS选择器.md  025mac arm开发qt环境安装.md  027 qt 窗口标志 Sheet.md  029mac qt QDialog exec无法程序坞退出.md  800QT部件问题README.md  Qt 基本了解.md  Qt 安装.md  Qt 核心概念.md  README.md  多线程问题工具.md  工具.md
doc/qtdev/: 001README.md  03 使用 VSCode 和 CMake 进行 Qt 开发.md  README.md
doc/qtwidgetsbeginners/: 799QT事件问题README.md  801实现自定义ToolTip的方法README.md  快捷键问题.md
doc/resume/: aitixiao.md  prompt.md  resume.md  resume_qa.md  summary_filmora.md  summary_presentory.md  summary_presentory_1.md  summary_presentory_2.md  summary_vcu.md  summary_vcu_1.md  youshi.md
doc/tool/: Typora 破解 .md  Windows Terminal + PowerShell.md  使用 VSCode 编写 UML.md  阿里云OSS图床配置.md
doc/vscode/: VSCode 运行任务脚本.md  VSCode 配置 CMake 构建目录.md
doc/ws/: 安装包安装速度优化 — 阶段性成功及遗留问题.md  安装速度优化 — 7z 多线程 SubPack 方案实施文档.md
mycc/: NOTE.md  README.md  install.ps1  mycc-cli.js  mycc.cmd  mycc.ps1  package.json
py/: dir_copy.py  dylib_copy.py  img2qrc.py  qm.py  qm_copy.py  qm_generate.py  ts.py  ts_generate.py  usage.md
qmlmaterial/: CMakeLists.txt
qmlmaterial/src/: plugin.cpp
qmlmaterialtest/: CMakeLists.txt  main.cpp
qmlmaterialtest/qrc/: demo.qrc  icons.qrc
qtmaterial/: CMakeLists.txt
qtmaterial/inc/: qtmaterial_global.h
qtmaterial/qrc/: component.qrc  control.qrc  extension.qrc  fonts.qrc  qss.qrc  qtmaterial.qrc
qttest/: CMakeLists.txt  README.md
qttest/qtstart/: CMakeLists.txt
qttest/qtstart/src/: flowlayout.cpp  flowlayout.h  main.cpp  mainWindow.cpp  mainWindow.h
qttest/qtstart/src/qtevent/: event_demo.cpp  event_demo.h  event_handing.cpp  event_handing.h  event_transfer.cpp  event_transfer.h
qttest/qtstart/src/qtlayouts/: qbox_layout.cpp  qbox_layout.h  qform_layout.cpp  qform_layout.h  qgrid_layout.cpp  qgrid_layout.h  qstack_layout.cpp  qstack_layout.h  qtlayoutswindow.cpp  qtlayoutswindow.h
qttest/qtstart/src/qtwidgets/: frame_family.cpp  frame_family.h  frame_use.cpp  frame_use.h  modal_dialog.cpp  modal_dialog.h  qtwidgetsdialog.cpp  qtwidgetsdialog.h  qtwidgetswindow.cpp  qtwidgetswindow.h  standard_dialog.cpp  standard_dialog.h  window_geometry.h  window_switch.cpp  window_switch.h  window_type.h  windows_and_sub_widgets.h
(+780 files in other folders)
